# chinese_chess_coach

./: .env.example  .gitignore  AGENTS.md  README.md  TODO.md  pyproject.toml  start.sh  test_api.html  test_api.py
backend/: main.py
backend/ai/: __init__.py  engine.py  prompts.py
backend/api/: __init__.py  ai.py  game.py  settings.py
backend/engines/: minimax_engine.py  moonfish_adapter.py  moonfish_core.py  moonfish_engine.py  moonfish_engine_v2.py  moonfish_engine_v3.py
backend/game/: __init__.py  rules.py  state.py
backend/models/: schemas.py
docs/: AI_GUIDELINES.md  CODE_STYLE.md  DEVELOPMENT.md  STRUCTURE.md  XIANGQI_RULES.md
frontend/: index.html
frontend/static/css/: style.css
frontend/static/js/: ai.js  board.js  game.js
tests/: __init__.py  test_ai_engine.py  test_ai_engine_integration.py  test_api_integration.py  test_game.py  test_moonfish_adapter.py  test_moonfish_engine.py  test_rules.py  test_settings_api.py
